--- a/admin.css
+++ b/admin.css
@@ -8,6 +8,7 @@ body {
 .body {
     display: flex;
     flex-direction: row;
+    margin: 0px;
 }
 
 .toolbar {
@@ -19,9 +20,22 @@ body {
     height: 100vh;
 }
 
+.toolbar-logo {
+    height: 20px;
+    width: 20px;
+    color: white;
+    background-color: white;
+}
+
 
 .toolbar-list {
     margin-top: 100px;
+}
+
+.toolbar-item {
+    display: flex;
+    margin: 10px;
+    
 }
 
 .right {
@@ -37,6 +51,7 @@ body {
 .right-header-top {
     display: flex;
     justify-content: space-between;
+    margin: 10px;
 }
 
 .search {
@@ -51,39 +66,50 @@ body {
 .right-header-bottom {
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
 
+}
+
+.right-header-bottom-right {
+    margin-right: 23px;
+    margin-bottom: 8px;
 }
 
 .header-button {
     background-color: rgb(0, 141, 212);
     color: white;
     border: none;
-    border-radius: 10px;
-    padding: 10px 15px 10px 15px;
+    border-radius: 20px;
+    padding: 9px 21px 9px 21px;
     vertical-align: end;
+    margin: 10px;
+    font-size: .7rem;
+    font-weight: 600;
+    
 }
+
+
 
 .right-body {
-    background-color: rgb(237, 240, 245);
-    height: 100%
-}
-
-
-
-.right-body-bottom {
     display: flex;
     height: 100%;
-    padding: 20px;
+    padding: 30px 0px 0px 20px;
+    /* width: 75vw; */
+    width: 100%;
+    margin: 0px;
+    background-color: rgb(237, 240, 245);
 
 }
 
 .right-body-left {
     height: 600px;
+    width: 70%;
 }
 
 .cards-label {
     font-size: 1.3rem;
     font-weight: 700;
+    margin-bottom: 10px;
 }
 
 
@@ -92,27 +118,74 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 20px;
-    width: 50vw;
-    height: 100%;
+    width: 92%;
+    height: 95%;
     /* margin-left: 30px; */
 }
 
 .card {
+    display: flex;
     background-color: white;
     border-radius: 3%;
     box-shadow: 1px 1px 3px rgb(154, 154, 154);
+    overflow: hidden;
+    
+}
+
+.blue-strip {
+    background-color: rgb(140, 192, 255);
+    height: 100%;
+    width: 2%;
+    margin: 0px;
+    padding: 0px;
+}
+
+.card-container {
+    /* background-color: white; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 98%;
+
 }
 
 .card-title {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    font-weight: 600;
     width: 90%;
+    color: black;
 
 }
 
 .card-info {
-    font-size: .7rem;
+    margin-top: 30px;
+    margin-left: 10px;
+    font-size: .8rem;
     width: 90%;
-    color: grey;
+    color: rgb(90, 90, 90);
+}
+
+.card-icons {
+    width: 130px;
+    align-self: end;
+    margin-right: 18px;
+    margin-bottom: 18px;
+}
+
+.card-icon {
+    width: 25px;
+    height: 25px;
+    margin-left: 5px;
+    /* margin-right: 5px; */
+}
+
+.right-body-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25%;
+    height: 600px;
+    margin-top: 10px;
 }
 
 .announcements {
@@ -120,13 +193,15 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 200px;
+    /* min-width: 200px; */
+    width: 90%;
     height: 220px;
     background-color: white;
-    margin-left: 30px;
+    /* margin-left: 30px; */
     /* margin-top: 20px; */
     box-shadow: 1px 1px 3px grey;
     border-radius: 3%;
+    margin: 0px;
 }
 
 .announcement {
@@ -163,11 +238,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 200px;
+    /* min-width: 200px; */
+    width: 90%;
     height: 220px;
     background-color: white;
-    margin-left: 30px;
-    margin-top: 20px;
+    /* margin-left: 30px; */
+    /* margin-top: 20px; */
     box-shadow: 1px 1px 3px grey;
     border-radius: 3%;
 
