--- a/admin.css
+++ b/admin.css
@@ -22,7 +22,15 @@ body {
 
 .toolbar-header {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
     
+}
+
+.toolbar-title {
+    font-size: 1.4rem;
+    margin-left: 10px;
 }
 
 .toolbar-logo {
@@ -34,6 +42,10 @@ body {
 
 .toolbar-list {
     margin-top: 100px;
+}
+
+.toolbar-list-bottom {
+    margin-top: 30px;
 }
 
 .toolbar-item {
@@ -118,7 +130,9 @@ body {
 .right-header-bottom {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
+    margin-top: 13px;
+    /* margin-bottom: 15px; */
 
 }
 
@@ -126,6 +140,7 @@ body {
     display: flex;
     align-items: center;
     margin-left: 30px;
+    /* margin-bottom: 15px; */
 }
 
 .right-header-bottom-left-name {
@@ -133,7 +148,7 @@ body {
 }
 
 .hi-there {
-    font-size: .6rem;
+    font-size: .8rem;
     font-weight: 600;
     /* margin: 0px; */
 }
@@ -154,7 +169,7 @@ body {
     border: none;
     border-radius: 20px;
     padding: 9px 21px 9px 21px;
-    vertical-align: end;
+    /* vertical-align: end; */
     margin: 10px;
     font-size: .7rem;
     font-weight: 600;
@@ -320,4 +335,32 @@ body {
     box-shadow: 1px 1px 3px grey;
     border-radius: 3%;
 
+}
+
+.trending-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0px 5px 0px 20px;
+    width: 100%;
+}
+
+.trending-item-list {
+    padding-right: 20px;
+    height: 90%;
+    width: 90%;
+}
+
+.trending-handle {
+    font-size: .8rem;
+    margin-left: 8px;
+}
+
+.trending-app {
+    font-size: .8rem;
+}
+
+.trending-image {
+    width: 40px;
+    height: 40px;
 }
