--- a/admin.css
+++ b/admin.css
@@ -22,9 +22,10 @@ body {
 
 .toolbar-header {
     display: flex;
-    align-items: center;
+    /* align-items: center;
     justify-content: center;
-    margin-top: 15px;
+    margin-top: 15px; */
+    margin: 20px 10px 10px 20px;
     
 }
 
@@ -32,6 +33,8 @@ body {
     font-size: 1.4rem;
     margin-left: 10px;
 }
+
+
 
 .toolbar-logo {
     height: 20px;
@@ -41,7 +44,7 @@ body {
 
 
 .toolbar-list {
-    margin-top: 100px;
+    margin-top: 60px;
 }
 
 .toolbar-list-bottom {
@@ -51,7 +54,13 @@ body {
 .toolbar-item {
     display: flex;
     margin: 10px 10px 10px 20px;
+    cursor: pointer;
+    transition: transform .2s;
     
+}
+
+.toolbar-item:hover {
+    transform: scale(1.1);
 }
 
 .toolbar-list-logo {
@@ -105,6 +114,7 @@ body {
     width: 20px;
     height: 20px;
     margin-right: 5px;
+    cursor: pointer;
 }
 
 .header-logo {
@@ -173,7 +183,15 @@ body {
     margin: 10px;
     font-size: .7rem;
     font-weight: 600;
+    cursor: pointer;
+    transition: .2s;
     
+}
+
+.header-button:hover {
+    background-color: white;
+    color: rgb(0, 141, 212);
+    border: 2px solid rgb(0, 141, 212)
 }
 
 
@@ -264,6 +282,7 @@ body {
     width: 25px;
     height: 25px;
     margin-left: 5px;
+    cursor: pointer;
     /* margin-right: 5px; */
 }
 
@@ -297,6 +316,7 @@ body {
     height: 30%;
     border-bottom: 1px solid grey;
     background-color: white;
+    cursor: pointer;
 
 }
 
@@ -319,6 +339,8 @@ body {
     /* margin-bottom: 20px; */
     font-size: 1.3rem;
     font-weight: 700;
+    margin-top: -10px;
+    margin-bottom: 10px;
 }
 
 .trending {
@@ -343,6 +365,12 @@ body {
     align-items: center;
     margin: 0px 5px 0px 20px;
     width: 100%;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.trending-item:hover {
+    transform: scale(1.1);
 }
 
 .trending-item-list {
